<resources>
    <string name="app_name">Panther-Events-App</string>
    <string name="event_app_name">Wetin Dey Sup</string>
    <string name="welcome_on_board">Welcome on board!</string>
    <string name="sign_in_heading">Sign in or Create an account</string>
    <string name="continue_with_google">Continue with Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timeline">Timeline</string>
    <string name="done">Done</string>
    <string name="create_event">Create Event</string>
    <string name="type_event_description">Type event description</string>
    <string name="starts">Starts</string>
    <string name="ends">Ends</string>
    <string name="add_location">Add location</string>
    <string name="select_groups">Select groups</string>
</resources>