<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCreateEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_event"
        android:textSize="24sp"
        android:fontFamily="@font/space_grotesk_medium"
        android:layout_marginTop="74dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEventDescription"
        android:layout_width="388dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:gravity="top"
        android:hint="@string/type_event_description"
        android:inputType="textMultiLine"
        android:minHeight="144dp"
        android:paddingStart="9dp"
        android:paddingEnd="9dp"
        android:textSize="16sp"
        android:background="@color/white"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCreateEvent"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tvStarts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starts"
        android:textSize="16sp"
        android:fontFamily="@font/space_grotesk_medium"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/etEventDescription"/>

    <TextView
        android:id="@+id/tvEnds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ends"
        android:textSize="16sp"
        android:fontFamily="@font/space_grotesk_medium"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvStarts"/>


</androidx.constraintlayout.widget.ConstraintLayout>