<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/space_grotesk_medium"
        android:text="@string/welcome_on_board"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="162dp"
        android:fontFamily="@font/space_grotesk_semibold"
        android:text="@string/sign_in_heading"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:lineHeight="28sp" />

    <TextView
        android:id="@+id/signInButton"
        android:layout_width="350dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/google_button"
        android:drawableStart="@drawable/google_logo_xml"
        android:fontFamily="@font/space_grotesk_medium"
        android:gravity="left|center_vertical"
        android:text="@string/continue_with_google"

        android:drawablePadding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="RtlCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>